--- a/src/app/software/component/setup-broker-list/setup-broker-list.component.html
+++ b/src/app/software/component/setup-broker-list/setup-broker-list.component.html
@@ -1,1 +1,94 @@
-<p>setup-broker-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/broker.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            Broker
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddBroker()"
+            [disabled]="isButtonAddBrokerDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="brokerFilter($event)" placeholder="Filter" #brokerFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="brokerDataSource" #brokerSort="matSort" matSort style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditBroker(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteBroker(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="BrokerCode">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Broker Code
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.BrokerCode}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Broker">
+                        <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Broker </mat-header-cell>
+                        <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.FullName}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Address">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Address </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Address}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Status">
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                        <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="IsLocked">
+                        <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                        <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                            <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                (click)="$event.preventDefault()"></mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="brokerDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: brokerDisplayedColumns;"></mat-row>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="7">No data matching the filter "{{brokerFilterData.value}}"</td>
+                    </tr>
+                </mat-table>
+
+                <mat-paginator #brokerPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
