--- a/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
+++ b/src/app/software/component/setup-customer-detail/setup-customer-detail.component.html
@@ -27,10 +27,10 @@
         </button>
     </mat-toolbar>
     <mat-divider></mat-divider>
-    <div class="software-container">
-        <mat-tab-group mat-align-tabs="start">
-            <mat-tab label="Customer Information">
-                <div fxLayout="row" fxLayout.xs="column" style="margin-top: 10px;">
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="Customer Information">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="25" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>Customer Code</mat-label>
@@ -256,9 +256,11 @@
 
                     </div>
                 </div>
-            </mat-tab>
-            <mat-tab label="Employment Information">
-                <div fxLayout="row" fxLayout.xs="column" style="margin-top: 10px;">
+            </div>
+        </mat-tab>
+        <mat-tab label="Employment Information">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
                     <div fxFlex="25" style="padding: 5px;">
                         <mat-form-field appearance="fill" style="width: 100%;">
                             <mat-label>ID Type</mat-label>
@@ -379,7 +381,7 @@
 
                     </div>
                 </div>
-            </mat-tab>
-        </mat-tab-group>
-    </div>
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
