--- a/src/app/software/software.component.html
+++ b/src/app/software/software.component.html
@@ -17,7 +17,7 @@
                 Settings
             </button>
             <mat-divider></mat-divider>
-            <button mat-menu-item>
+            <button mat-menu-item (click)="buttonLogout()">
                 Logout
             </button>
         </mat-menu>
