--- a/src/app/software/component/activity-sold-unit-list/activity-sold-unit-list.component.html
+++ b/src/app/software/component/activity-sold-unit-list/activity-sold-unit-list.component.html
@@ -1,1 +1,129 @@
-<p>activity-sold-unit-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/sold-unit.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            SoldUnit
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddSoldUnit()"
+            [disabled]="isButtonAddSoldUnitDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Start date</mat-label>
+                    <input matInput [matDatepicker]="soldUnitListStartDatePicker"
+                        [formControl]="soldUnitListStartDateFilterFormControl"
+                        [value]="soldUnitListStartDateFilterFormControl.value"
+                        (dateChange)="soldUnitDateRangeFiltersDateChange('change', $event)">
+                    <mat-datepicker-toggle matSuffix [for]="soldUnitListStartDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #soldUnitListStartDatePicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div fxFlex="25" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>End date</mat-label>
+                    <input matInput [matDatepicker]="soldUnitListEndDatePicker"
+                        [formControl]="soldUnitEndDateFilterFormControl"
+                        [value]="soldUnitEndDateFilterFormControl.value"
+                        (dateChange)="soldUnitDateRangeFiltersDateChange('change', $event)">
+                    <mat-datepicker-toggle matSuffix [for]="soldUnitListEndDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #soldUnitListEndDatePicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div fxFlex="50" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="soldUnitFilter($event)" placeholder="Filter" #soldUnitFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="soldUnitDataSource" #soldUnitSort="matSort" matSort
+                    style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditSoldUnit(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteSoldUnit(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="SoldUnitNumber">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Sold Unit No.
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.SoldUnitNumber}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="SoldUnitDate">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.SoldUnitDate}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Project">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Project </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Project}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Unit">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Unit
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Unit}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Customer">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Status">
+                        <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Status </mat-header-cell>
+                        <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Status}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="IsLocked">
+                        <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                        <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                            <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                (click)="$event.preventDefault()"></mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="soldUnitDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: soldUnitDisplayedColumns;"></mat-row>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="9">No data matching the filter "{{soldUnitFilterData.value}}"</td>
+                    </tr>
+                </mat-table>
+
+                <mat-paginator #soldUnitPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
