--- a/src/app/software/software.component.css
+++ b/src/app/software/software.component.css
@@ -10,7 +10,7 @@
 
 .sidenav-container {
     flex: 1;
-    background-color: rgb(255, 255, 255);
+    /* background-color: rgb(255, 255, 255); */
 }
 
 .main-is-mobile .sidenav-container {
