--- a/src/app/software/component/activity-collection-list/activity-collection-list.component.html
+++ b/src/app/software/component/activity-collection-list/activity-collection-list.component.html
@@ -1,1 +1,120 @@
-<p>activity-collection-list works!</p>
+<div *ngIf="isSpinnerShow" style="padding: 100px 0px 15px 0px; text-align: center;">
+    <h4>Please wait...</h4>
+    <mat-spinner style="margin:auto;display:block;"></mat-spinner>
+</div>
+<div [hidden]="!isContentShow">
+    <mat-toolbar>
+        &nbsp;&nbsp;
+        <img src="../../../../assets/images/software-icons/collection.png" class="toolBar-img-style" />
+        <span class="toolbar-title-style">
+            Collection
+        </span>
+        <span class="toolbar-spacer"></span>
+        <button mat-flat-button color="primary" style="margin-right: 5px;" (click)="buttonAddCollection()"
+            [disabled]="isButtonAddCollectionDisabled">
+            Add
+        </button>
+        <button mat-flat-button color="warn" routerLink="/software">
+            Close
+        </button>
+    </mat-toolbar>
+    <mat-divider></mat-divider>
+    <div class="software-container">
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="25" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Start date</mat-label>
+                    <input matInput [matDatepicker]="collectionListStartDatePicker"
+                        [formControl]="collectionListStartDateFilterFormControl"
+                        [value]="collectionListStartDateFilterFormControl.value"
+                        (dateChange)="collectionDateRangeFiltersDateChange('change', $event)">
+                    <mat-datepicker-toggle matSuffix [for]="collectionListStartDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #collectionListStartDatePicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div fxFlex="25" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>End date</mat-label>
+                    <input matInput [matDatepicker]="collectionListEndDatePicker"
+                        [formControl]="collectionEndDateFilterFormControl"
+                        [value]="collectionEndDateFilterFormControl.value"
+                        (dateChange)="collectionDateRangeFiltersDateChange('change', $event)">
+                    <mat-datepicker-toggle matSuffix [for]="collectionListEndDatePicker"></mat-datepicker-toggle>
+                    <mat-datepicker #collectionListEndDatePicker></mat-datepicker>
+                </mat-form-field>
+            </div>
+            <div fxFlex="50" style="padding: 5px;">
+                <mat-form-field appearance="fill" style="width: 100%;">
+                    <mat-label>Filter</mat-label>
+                    <input matInput (keyup)="collectionFilter($event)" placeholder="Filter" #collectionFilterData />
+                </mat-form-field>
+            </div>
+        </div>
+        <div fxLayout="row" fxLayout.xs="column">
+            <div fxFlex="100" style="padding: 5px;">
+                <mat-table [dataSource]="collectionDataSource" #collectionSort="matSort" matSort
+                    style="overflow-x: scroll;">
+
+                    <ng-container matColumnDef="ButtonEdit">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="primary" (click)="buttonEditCollection(row)">
+                                Edit
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="ButtonDelete">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row">
+                            <button mat-flat-button color="warn" (click)="buttonDeleteCollection(row)">
+                                Delete
+                            </button>
+                        </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="CollectionNumber">
+                        <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Collection No.
+                        </mat-header-cell>
+                        <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.CollectionNumber}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="CollectionDate">
+                        <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> Date </mat-header-cell>
+                        <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.CollectionDate}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Customer">
+                        <mat-header-cell fxFlex="200px" *matHeaderCellDef mat-sort-header> Customer
+                        </mat-header-cell>
+                        <mat-cell fxFlex="200px" *matCellDef="let row"> {{row.Customer}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="Particulars">
+                        <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Particulars
+                        </mat-header-cell>
+                        <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Particulars}} </mat-cell>
+                    </ng-container>
+
+                    <ng-container matColumnDef="IsLocked">
+                        <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> L </mat-header-cell>
+                        <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                            <mat-checkbox color="primary" [checked]="row.IsLocked" [disableRipple]="true"
+                                (click)="$event.preventDefault()"></mat-checkbox>
+                        </mat-cell>
+                    </ng-container>
+
+                    <mat-header-row *matHeaderRowDef="collectionDisplayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: collectionDisplayedColumns;"></mat-row>
+
+                    <tr class="mat-row" *matNoDataRow>
+                        <td class="mat-cell" colspan="7">No data matching the filter "{{collectionFilterData.value}}"
+                        </td>
+                    </tr>
+                </mat-table>
+
+                <mat-paginator #collectionPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+            </div>
+        </div>
+    </div>
+</div>
