--- a/src/app/security/security.component.html
+++ b/src/app/security/security.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar>
-    <span>Filbroker</span>
+    <img src="./../../assets/images/filbroker-logo/filbroker.png" height="35" style="margin-bottom: 10px;" routerLink="/landing">
     <span class="example-spacer"></span>
     <button mat-flat-button color="primary" class="example-icon" routerLink="/security/system-login">
         Login
