--- a/src/app/software/component/setup-project-detail/setup-project-detail.component.html
+++ b/src/app/software/component/setup-project-detail/setup-project-detail.component.html
@@ -81,4 +81,95 @@
             </div>
         </div>
     </div>
+    <mat-divider></mat-divider>
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="House Models">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px; text-align: right;">
+                        <button mat-flat-button color="primary" [disabled]="mstProjectModel.IsLocked"
+                            (click)="buttonAddHouseModel()">
+                            Add
+                        </button>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="houseModelFilter($event)" placeholder="Filter"
+                                #houseModelFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="houseModelDataSource" #houseModelSort="matSort" matSort
+                            style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary" (click)="buttonEditHouseModel(row)"
+                                        [disabled]="mstProjectModel.IsLocked">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ButtonDelete">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="warn" (click)="buttonDeleteHouseModel(row)"
+                                        [disabled]="mstProjectModel.IsLocked">
+                                        Delete
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="HouseModelCode">
+                                <mat-header-cell fxFlex="120px" *matHeaderCellDef mat-sort-header> Code
+                                </mat-header-cell>
+                                <mat-cell fxFlex="120px" *matCellDef="let row"> {{row.HouseModelCode}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="HouseModel">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> House Model
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.HouseModel}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="TFA">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> TFA (sqm)
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.TFA}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Price">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Price
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Price}} </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="houseModelDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: houseModelDisplayedColumns;"></mat-row>
+
+                            <tr class="mat-row" *matNoDataRow>
+                                <td class="mat-cell" colspan="6">No data matching the filter
+                                    "{{houseModelFilterData.value}}"</td>
+                            </tr>
+                        </mat-table>
+
+                        <mat-paginator #houseModelPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
