Checklist Requirement CRUD and Some Adjustments

--- a/src/app/security/component/system-login/system-login.component.html
+++ b/src/app/security/component/system-login/system-login.component.html
@@ -6,10 +6,11 @@
                 <mat-card>
                     <div fxLayout="row" fxLayout.xs="column">
                         <div fxFlex="100" style="padding: 5px;">
-                            <img src="../../../../assets/images/filbroker-logo/filbroker.png" style="margin-top: 7px;"
+                            <!-- <img src="../../../../assets/images/filbroker-logo/filbroker.png" style="margin-top: 7px;"
                                 height="30" routerLink="/" />
                             <br>
-                            <br>
+                            <br> -->
+                            <h1>Sign In</h1>
                         </div>
                     </div>
                     <div fxLayout="row" fxLayout.xs="column">
