--- a/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
+++ b/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
@@ -99,4 +99,107 @@
             </div>
         </div>
     </div>
+    <mat-divider></mat-divider>
+    <mat-tab-group mat-align-tabs="start">
+        <mat-tab label="Checklist Requirements">
+            <div class="software-container">
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 3px; text-align: right;">
+                        <button mat-flat-button color="primary" [disabled]="mstChecklistModel.IsLocked"
+                            (click)="buttonAddChecklistRequirement()">
+                            Add
+                        </button>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-form-field appearance="fill" style="width: 100%;">
+                            <mat-label>Filter</mat-label>
+                            <input matInput (keyup)="checklistRequirementFilter($event)" placeholder="Filter"
+                                #checklistRequirementFilterData />
+                        </mat-form-field>
+                    </div>
+                </div>
+
+                <div fxLayout="row" fxLayout.xs="column">
+                    <div fxFlex="100" style="padding: 5px;">
+                        <mat-table [dataSource]="checklistRequirementDataSource" #checklistRequirementSort="matSort"
+                            matSort style="overflow-x: scroll;">
+
+                            <ng-container matColumnDef="ButtonEdit">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="primary"
+                                        (click)="buttonEditChecklistRequirement(row)"
+                                        [disabled]="mstChecklistModel.IsLocked">
+                                        Edit
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="ButtonDelete">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header></mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row">
+                                    <button mat-flat-button color="warn" (click)="buttonDeleteChecklistRequirement(row)"
+                                        [disabled]="mstChecklistModel.IsLocked">
+                                        Delete
+                                    </button>
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="RequirementNo">
+                                <mat-header-cell fxFlex="100px" *matHeaderCellDef mat-sort-header> No.
+                                </mat-header-cell>
+                                <mat-cell fxFlex="100px" *matCellDef="let row"> {{row.RequirementNo}}
+                                </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Requirement">
+                                <mat-header-cell fxFlex="250px" *matHeaderCellDef mat-sort-header> Requirement
+                                </mat-header-cell>
+                                <mat-cell fxFlex="250px" *matCellDef="let row"> {{row.Requirement}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Category">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Category
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Category}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="Type">
+                                <mat-header-cell fxFlex="150px" *matHeaderCellDef mat-sort-header> Type
+                                </mat-header-cell>
+                                <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Type}} </mat-cell>
+                            </ng-container>
+
+                            <ng-container matColumnDef="WithAttachments">
+                                <mat-header-cell fxFlex="50px" *matHeaderCellDef mat-sort-header> A </mat-header-cell>
+                                <mat-cell fxFlex="50px" *matCellDef="let row" style="text-align: center !important;">
+                                    <mat-checkbox color="primary" [checked]="row.WithAttachments" [disableRipple]="true"
+                                        (click)="$event.preventDefault()">
+                                    </mat-checkbox>
+                                </mat-cell>
+                            </ng-container>
+
+                            <mat-header-row *matHeaderRowDef="checklistRequirementDisplayedColumns"></mat-header-row>
+                            <mat-row *matRowDef="let row; columns: checklistRequirementDisplayedColumns;"></mat-row>
+
+                            <tr class="mat-row" *matNoDataRow>
+                                <td class="mat-cell" colspan="7">No data matching the filter
+                                    "{{checklistRequirementFilterData.value}}"</td>
+                            </tr>
+                        </mat-table>
+
+                        <mat-paginator #checklistRequirementPaginator [pageSizeOptions]="[10, 50, 100, 200]">
+                        </mat-paginator>
+                    </div>
+                </div>
+
+
+
+
+            </div>
+        </mat-tab>
+    </mat-tab-group>
 </div>
