Extra Space in Columns

--- a/src/app/software/component/activity-sold-unit-list/activity-sold-unit-list.component.html
+++ b/src/app/software/component/activity-sold-unit-list/activity-sold-unit-list.component.html
@@ -113,6 +113,12 @@
                                 (click)="$event.preventDefault()"></mat-checkbox>
                         </mat-cell>
                     </ng-container>
+                    
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
 
                     <mat-header-row *matHeaderRowDef="soldUnitDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: soldUnitDisplayedColumns;"></mat-row>
