--- a/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
+++ b/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
@@ -97,6 +97,12 @@
                         </mat-cell>
                     </ng-container>
 
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
+
                     <mat-header-row *matHeaderRowDef="checklistDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: checklistDisplayedColumns;"></mat-row>
 
