--- a/src/app/software/component/setup-customer-list/setup-customer-list.component.html
+++ b/src/app/software/component/setup-customer-list/setup-customer-list.component.html
@@ -80,6 +80,12 @@
                         </mat-cell>
                     </ng-container>
 
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
+
                     <mat-header-row *matHeaderRowDef="customerDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: customerDisplayedColumns;"></mat-row>
 
