--- a/src/app/software/component/activity-collection-list/activity-collection-list.component.html
+++ b/src/app/software/component/activity-collection-list/activity-collection-list.component.html
@@ -103,6 +103,12 @@
                                 (click)="$event.preventDefault()"></mat-checkbox>
                         </mat-cell>
                     </ng-container>
+                    
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
 
                     <mat-header-row *matHeaderRowDef="collectionDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: collectionDisplayedColumns;"></mat-row>
