--- a/src/app/software/component/activity-commission-request-list/activity-commission-request-list.component.html
+++ b/src/app/software/component/activity-commission-request-list/activity-commission-request-list.component.html
@@ -109,6 +109,12 @@
                                 (click)="$event.preventDefault()"></mat-checkbox>
                         </mat-cell>
                     </ng-container>
+                    
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
 
                     <mat-header-row *matHeaderRowDef="commissionRequestDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: commissionRequestDisplayedColumns;"></mat-row>
