--- a/src/app/software/component/setup-broker-list/setup-broker-list.component.html
+++ b/src/app/software/component/setup-broker-list/setup-broker-list.component.html
@@ -79,6 +79,12 @@
                         </mat-cell>
                     </ng-container>
 
+                    <ng-container matColumnDef="Space">
+                        <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                        <mat-cell *matCellDef="let row">
+                        </mat-cell>
+                    </ng-container>
+
                     <mat-header-row *matHeaderRowDef="brokerDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: brokerDisplayedColumns;"></mat-row>
 
