--- a/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
+++ b/src/app/software/component/setup-checklist-detail/setup-checklist-detail.component.html
@@ -182,6 +182,12 @@
                                 </mat-cell>
                             </ng-container>
 
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
                             <mat-header-row *matHeaderRowDef="checklistRequirementDisplayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: checklistRequirementDisplayedColumns;"></mat-row>
 
