--- a/src/app/software/component/setup-project-detail/setup-project-detail.component.html
+++ b/src/app/software/component/setup-project-detail/setup-project-detail.component.html
@@ -153,6 +153,12 @@
                                 <mat-cell fxFlex="150px" *matCellDef="let row"> {{row.Price}} </mat-cell>
                             </ng-container>
 
+                            <ng-container matColumnDef="Space">
+                                <mat-header-cell *matHeaderCellDef mat-sort-header> </mat-header-cell>
+                                <mat-cell *matCellDef="let row">
+                                </mat-cell>
+                            </ng-container>
+
                             <mat-header-row *matHeaderRowDef="houseModelDisplayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: houseModelDisplayedColumns;"></mat-row>
 
