--- a/src/app/software/component/setup-customer-list/setup-customer-list.component.html
+++ b/src/app/software/component/setup-customer-list/setup-customer-list.component.html
@@ -89,9 +89,9 @@
                     <mat-header-row *matHeaderRowDef="customerDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: customerDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="7">No data matching the filter "{{customerFilterData.value}}"</td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #customerPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
