--- a/src/app/software/component/activity-collection-list/activity-collection-list.component.html
+++ b/src/app/software/component/activity-collection-list/activity-collection-list.component.html
@@ -113,10 +113,10 @@
                     <mat-header-row *matHeaderRowDef="collectionDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: collectionDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="7">No data matching the filter "{{collectionFilterData.value}}"
                         </td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #collectionPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
