--- a/src/app/software/component/activity-commission-request-list/activity-commission-request-list.component.html
+++ b/src/app/software/component/activity-commission-request-list/activity-commission-request-list.component.html
@@ -119,10 +119,10 @@
                     <mat-header-row *matHeaderRowDef="commissionRequestDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: commissionRequestDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="8">No data matching the filter
                             "{{commissionRequestFilterData.value}}"</td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #commissionRequestPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
