--- a/src/app/software/component/setup-broker-list/setup-broker-list.component.html
+++ b/src/app/software/component/setup-broker-list/setup-broker-list.component.html
@@ -88,9 +88,9 @@
                     <mat-header-row *matHeaderRowDef="brokerDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: brokerDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="7">No data matching the filter "{{brokerFilterData.value}}"</td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #brokerPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
