--- a/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
+++ b/src/app/software/component/setup-checklist-list/setup-checklist-list.component.html
@@ -106,10 +106,10 @@
                     <mat-header-row *matHeaderRowDef="checklistDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: checklistDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="8">No data matching the filter "{{checklistFilterData.value}}"
                         </td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #checklistPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
