--- a/src/app/software/component/setup-project-detail/setup-project-detail.component.html
+++ b/src/app/software/component/setup-project-detail/setup-project-detail.component.html
@@ -162,10 +162,10 @@
                             <mat-header-row *matHeaderRowDef="houseModelDisplayedColumns"></mat-header-row>
                             <mat-row *matRowDef="let row; columns: houseModelDisplayedColumns;"></mat-row>
 
-                            <tr class="mat-row" *matNoDataRow>
+                            <!-- <tr class="mat-row" *matNoDataRow>
                                 <td class="mat-cell" colspan="6">No data matching the filter
                                     "{{houseModelFilterData.value}}"</td>
-                            </tr>
+                            </tr> -->
                         </mat-table>
 
                         <mat-paginator #houseModelPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
