--- a/src/app/software/component/setup-unit-list/setup-unit-list.component.html
+++ b/src/app/software/component/setup-unit-list/setup-unit-list.component.html
@@ -104,9 +104,9 @@
                     <mat-header-row *matHeaderRowDef="unitDisplayedColumns"></mat-header-row>
                     <mat-row *matRowDef="let row; columns: unitDisplayedColumns;"></mat-row>
 
-                    <tr class="mat-row" *matNoDataRow>
+                    <!-- <tr class="mat-row" *matNoDataRow>
                         <td class="mat-cell" colspan="8">No data matching the filter "{{unitFilterData.value}}"</td>
-                    </tr>
+                    </tr> -->
                 </mat-table>
 
                 <mat-paginator #unitPaginator [pageSizeOptions]="[10, 50, 100, 200]"></mat-paginator>
